--- a/fall/215A/2019/10/20191003.tex
+++ b/fall/215A/2019/10/20191003.tex
@@ -36,7 +36,7 @@ Consider now
 \begin{equation}
     \cP_n \equiv \ket{z_n}\bra{z_n}
 \end{equation}
-the projection operator onto $\ket{z_n}$. Naturally, $\cP_n \cP_n=\cP_n$ since
+the projection operator onto $\ket{z_n}$. Naturally, $\cP_n \cP_n=\cP_n$ for any normalized $\ket{z_n}$ since
 \begin{gather*}
     \cP_n \ket{v} = \ket{z_n} \braket{z_n}{v}\\
     \implies \cP_n^2 \ket{v} = \ket{z_n}\braket{z_n}{z_n}\braket{z_n}{v} = \cP_n \ket{v} \text{ if }\braket{z_n}{z_n}=1.
