--- a/fall/215A/2019/10/20191010.tex
+++ b/fall/215A/2019/10/20191010.tex
@@ -141,7 +141,7 @@ with corresponding Hamiltonian
     H=\frac{p^2}{2m} +\frac{1}{2} m\omega^2 x^2.
 \end{equation}
 
-Canonical quantization tells us to promote $x$ and $p$ to operators,
+Canonical quantization tells us to promote $x$ and $p$ to operators obeying the canonical commutation relation
 \begin{equation}
     [\hat x,\hat p]=i\hbar,
 \end{equation}
@@ -175,7 +175,8 @@ We can simplify by defining
     \frac{E}{\hbar \omega} = \epsilon,\\
     x= \sqrt{\frac{\hbar}{m\omega}}\xi.
 \end{gather}
-In these variables, our equation becomes
+In these variables, our equation becomes%
+    \footnote{This is a good strategy for physical problems in general. Defining dimensionless variables often gives us a sense of the important scales in the problem, e.g. energy is naturally measured in units of $\hbar \omega$. Sometimes we also recognize a differential equation as e.g. Hermite's equation or Legendre's equation when we write it in dimensionless form; a bit of familiarity with some common second-order equations can save a lot of time.}
 \begin{equation}
     \frac{d^2\psi}{d\xi^2} +(2\epsilon-\xi^2)\psi=0.
 \end{equation}
