--- a/fall/215A/2019/10/20191022.tex
+++ b/fall/215A/2019/10/20191022.tex
@@ -237,6 +237,6 @@ In terms of the transfer matrix elements (which relate $A_L,B_L,A_R$), we have
 \end{equation}
 and by plugging in we see that our transmission coefficient is
 \begin{equation}
-    T = \paren{1+\frac{V_0^2}{4E(V_0-E)} \sinh^2 (\alpha a)}^{-1} \approx \frac{4E(V_0-E)}{V_0} e^{-2 \frac{\sqrt{2m(V_0-E)}}{\hbar} a}
+    T = \paren{1+\frac{V_0^2}{4E(V_0-E)} \sinh^2 (\alpha a)}^{-1} \approx \frac{4E(V_0-E)}{V_0^2} e^{-2 \frac{\sqrt{2m(V_0-E)}}{\hbar} a}
 \end{equation}
 for $\alpha a \gg 1$. We see that for very wide barriers (large $a$) or very high barriers (large $\alpha^2 \sim V_0-E$), the probability of tunneling is exponentially suppressed.
