--- a/fall/215A/2019/11/20191119.tex
+++ b/fall/215A/2019/11/20191119.tex
@@ -49,7 +49,7 @@ For instance, in the harmonic oscillator we would have
     \avg{\hat x^2(\tilde t)} = \frac{\int [\cD x(t)]x(\tilde t)^2 e^{\frac{iS[x(t)]}{\hbar}}}{\int [\cD x(t)] e^{\frac{iS[x(t)]}{\hbar}}}.
 \end{equation}
 But if $\delta_\text{tot} S$ vanishes, then we recover the classical equations of motion. This tells us that \emph{classical equations of motion hold inside expectation values}. This is Ehrenfest's theorem.%
-    \footnote{This is not the same statement as saying that expectation values obey classical equations of motion! Clearly, $\avg{x}^2$ and $\avg{x^2}$ are in general different quantities. When we apply the theorem, it's the latter we want to use.}
+    \footnote{This is not the same as saying that expectation values obey classical equations of motion! Clearly, $\avg{x}^2$ and $\avg{x^2}$ are in general different quantities. When we apply the theorem, it's the latter we want to use.}
 $S[\hat x, \hat p]$ is an operator, as is $\delta_\text{tot}S$. Quantum mechanics realizes the classical equations of motion as an expectation value/average statement
 \begin{equation}
     \avg{\delta_\text{tot}S} =0.
