--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -1,11 +1,11 @@
 \documentclass{../mynotes}
 %\input{macros}
 \begin{document}
-\title{Physics 204A: Math Methods}
+\title{Physics 204A: Methods of Mathematical Physics I}
 \author{Ian Lim\\ Last updated \today}
 \fancyhead[RE]{\small\slshape Physics 204A Lecture Notes}
 \maketitle
-{\small\noindent These notes were taken for Physics 204A, \emph{Math Methods}, as taught by Nemanja Kaloper at the University of California, Davis in fall quarter 2019. I live-\TeX ed them using Overleaf, and as such there may be typos; please send questions, comments, complaints, and corrections to 
+{\small\noindent These notes were taken for Physics 204A, \emph{Methods of Mathematical Physics I}, as taught by Nemanja Kaloper at the University of California, Davis in fall quarter 2019. I live-\TeX ed them using Overleaf, and as such there may be typos; please send questions, comments, complaints, and corrections to 
 \href{mailto:itlim@ucdavis.edu?subject=204A\%20Lecture\%20Notes}{\texttt{itlim@ucdavis.edu}}.\\
 Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as of the time of writing, you can find him at \url{https://web.ma.utexas.edu/users/a.debray/}.}
 
